[gd_scene load_steps=3 format=3 uid="uid://dcyw87dw6swua"]

[ext_resource type="Script" path="res://scenes/simulations/Primative Yo-Yo/scripts/slider_panel.gd" id="1_6yma6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrkei"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="SliderPanel" type="Panel"]
offset_right = 76.0
offset_bottom = 45.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hrkei")
script = ExtResource("1_6yma6")

[node name="TimeSlider" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 20.0
offset_bottom = 20.0

[node name="SliderTime" type="HSlider" parent="TimeSlider"]
layout_mode = 1
offset_right = 100.0
offset_bottom = 16.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="TimeSlider/SliderTime"]
layout_mode = 1
offset_left = 100.0
offset_right = 140.0
offset_bottom = 23.0
text = "Time"

[node name="DiskRadius" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 45.0

[node name="SliderDiskRadius" type="HSlider" parent="DiskRadius"]
layout_mode = 1
offset_right = 100.0
offset_bottom = 16.0
min_value = 0.01
max_value = 10.0
step = 0.01
value = 0.3

[node name="Label" type="Label" parent="DiskRadius/SliderDiskRadius"]
layout_mode = 0
offset_left = 100.0
offset_right = 140.0
offset_bottom = 23.0
text = "Disk Radius"

[node name="DiskMass" type="Control" parent="."]
anchors_preset = 0
offset_top = 60.0
offset_right = 20.0
offset_bottom = 80.0

[node name="SliderDiskMass" type="HSlider" parent="DiskMass"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 16.0
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1

[node name="Label" type="Label" parent="DiskMass/SliderDiskMass"]
layout_mode = 0
offset_left = 100.0
offset_right = 140.0
offset_bottom = 23.0
text = "Disk Mass"

[node name="AxleHeight" type="Control" parent="."]
anchors_preset = 0
offset_top = 90.0
offset_right = 20.0
offset_bottom = 110.0

[node name="SliderAxleHeight" type="HSlider" parent="AxleHeight"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 16.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.08

[node name="Label" type="Label" parent="AxleHeight/SliderAxleHeight"]
layout_mode = 0
offset_left = 100.0
offset_right = 189.0
offset_bottom = 26.0
text = "Axle Height"

[node name="AxleRadius" type="Control" parent="."]
anchors_preset = 0
offset_top = 120.0
offset_right = 20.0
offset_bottom = 140.0

[node name="SliderAxleRadius" type="HSlider" parent="AxleRadius"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 16.0
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.03

[node name="Label" type="Label" parent="AxleRadius/SliderAxleRadius"]
layout_mode = 0
offset_left = 100.0
offset_right = 140.0
offset_bottom = 23.0
text = "Axle Radius"

[node name="AxleMass" type="Control" parent="."]
anchors_preset = 0
offset_left = 4.0
offset_top = 150.0
offset_right = 44.0
offset_bottom = 190.0

[node name="SliderAxleMass" type="HSlider" parent="AxleMass"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 16.0
max_value = 1.0
step = 0.001
value = 0.035

[node name="Label" type="Label" parent="AxleMass/SliderAxleMass"]
layout_mode = 0
offset_left = 100.0
offset_right = 140.0
offset_bottom = 23.0
text = "Axle Mass"

[connection signal="value_changed" from="TimeSlider/SliderTime" to="." method="_on_slider_time_value_changed"]
[connection signal="value_changed" from="DiskRadius/SliderDiskRadius" to="." method="_on_slider_disk_radius_value_changed"]
[connection signal="value_changed" from="DiskMass/SliderDiskMass" to="." method="_on_slider_disk_mass_value_changed"]
[connection signal="value_changed" from="AxleHeight/SliderAxleHeight" to="." method="_on_slider_axle_height_value_changed"]
[connection signal="value_changed" from="AxleRadius/SliderAxleRadius" to="." method="_on_slider_axle_radius_value_changed"]
[connection signal="value_changed" from="AxleMass/SliderAxleMass" to="." method="_on_slider_axle_mass_value_changed"]
